--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "rules": {
         "prettier/prettier": ["error"],
         "react/react-in-jsx-scope": "off",
-        "react/jsx-uses-react": "off"
+        "react/jsx-uses-react": "off",
+        "@typescript-eslint/strict-boolean-expressions": "off"
     }
 }
