--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,30 @@
         "prettier"
     ],
     "overrides": [
+        {
+            "files": ["*.js", "*.jsx", "*.ts", "*.tsx"],
+            "rules": {
+                "simple-import-sort/imports": [
+                    "error",
+                    {
+                        "groups": [
+                            // Packages `react` related packages come first.
+                            ["^react", "^@?\\w"],
+                            // Internal packages.
+                            ["^(@|components)(/.*|$)"],
+                            // Side effect imports.
+                            ["^\\u0000"],
+                            // Parent imports. Put `..` last.
+                            ["^\\.\\.(?!/?$)", "^\\.\\./?$"],
+                            // Other relative imports. Put same-folder imports and `.` last.
+                            ["^\\./(?=.*/)(?!/?$)", "^\\.(?!/?$)", "^\\./?$"],
+                            // Style imports.
+                            ["^.+\\.?(css)$"]
+                        ]
+                    }
+                ]
+            }
+        }
     ],
     "parserOptions": {
         "project": "./tsconfig.json",
@@ -17,12 +41,15 @@
     },
     "plugins": [
         "react",
-        "prettier"
+        "prettier",
+        "simple-import-sort"
     ],
     "rules": {
         "prettier/prettier": ["error"],
         "react/react-in-jsx-scope": "off",
         "react/jsx-uses-react": "off",
-        "@typescript-eslint/strict-boolean-expressions": "off"
+        "@typescript-eslint/strict-boolean-expressions": "off",
+        "simple-import-sort/imports": "error",
+        "simple-import-sort/exports": "error"
     }
 }
